<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/create_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileLabel"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/profile_emailEdit"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/profile_addressEdit"
        android:hint="@string/home_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/profile_titleEdit"
        android:hint="@string/title" />

    <Button
        android:text="@string/update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateButton"
        android:onClick="onUpdatePressed" />

    <TextView
        android:id="@+id/profileAlertView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_error" />


</LinearLayout>