<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/purityDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/purityDate"
        android:layout_alignBottom="@+id/purityDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/report_number"
        android:text=""
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/virusPPMTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virusPPM"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/virusPPMEditText"
        android:layout_alignBottom="@+id/virusPPMEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/contaminantPPMTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contaminantPPM"
        android:layout_marginBottom="39dp"
        android:textSize="15sp"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/contaminantPPMEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/contaminantPPMTextView"
        android:layout_alignBottom="@+id/contaminantPPMTextView"
        android:layout_alignLeft="@+id/virusPPMEditText"
        android:layout_alignStart="@+id/virusPPMEditText"
        android:ems="10"
        android:hint="@string/zero_hardcoded"
        android:inputType="number" />

    <TextView
        android:id="@+id/waterLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/water_location_address"
        android:layout_below="@+id/purityDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/latitude"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/purityLatitudeDecimal"
        android:layout_alignBottom="@+id/purityLatitudeDecimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/longitude"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/purityLongitudeDecimal"
        android:layout_alignBottom="@+id/purityLongitudeDecimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/purityLatitudeDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/waterLocationText"
        android:layout_toEndOf="@+id/longitudeText"
        android:layout_toRightOf="@+id/longitudeText"
        android:ems="10"
        android:hint="@string/report_decimal"
        android:inputType="numberDecimal"
        android:layout_alignLeft="@+id/purityDate"
        android:layout_alignStart="@+id/purityDate" />

    <EditText
        android:id="@+id/purityLongitudeDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/purityLatitudeDecimal"
        android:layout_alignRight="@+id/purityLatitudeDecimal"
        android:layout_below="@+id/purityLatitudeDecimal"
        android:ems="10"
        android:hint="@string/report_decimal"
        android:inputType="numberDecimal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/virusPPMEditText"
        android:layout_marginBottom="41dp"
        android:id="@+id/purityConditionSpinner"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:text="@string/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/purityConditionSpinner"
        android:id="@+id/textView"
        android:layout_toLeftOf="@+id/purityLongitudeDecimal"
        android:layout_alignTop="@+id/purityConditionSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/purityErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:contentDescription="@string/name"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:layout_marginRight="53dp"
        android:layout_marginEnd="53dp" />

    <EditText
        android:id="@+id/virusPPMEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zero_hardcoded"
        android:inputType="number"
        android:layout_above="@+id/contaminantPPMEditText"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginBottom="52dp"/>

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/purityErrorText"
        android:layout_alignLeft="@+id/contaminantPPMEditText"
        android:layout_alignStart="@+id/contaminantPPMEditText"
        android:id="@+id/submitButton"
        android:onClick="submit"/>

</RelativeLayout>