<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <com.jjoe64.graphview.GraphView
        android:layout_width="wrap_content"
        android:layout_height="295dp"
        android:id="@+id/graph"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="25sp"
        android:layout_above="@+id/historyLongEdit"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginEnd="11dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/historyLongEdit"
        android:layout_toStartOf="@+id/historyLongEdit"
        android:layout_marginEnd="11dp" />

    <EditText
        android:hint=""
        android:id="@+id/historyLatEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/graph"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/report_decimal" />

    <EditText
        android:hint=""
        android:id="@+id/historyLongEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/historyLatEdit"
        android:layout_below="@+id/historyLatEdit"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/report_decimal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/year"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/historyYearTextEdit"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:hint=""
        android:id="@+id/historyYearTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/two_thousand_year"
        android:layout_below="@+id/historyLongEdit"
        android:layout_alignStart="@+id/historyLongEdit" />

    <Spinner
        android:id="@+id/historySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:onClick="historyButtonPressed"/>

</RelativeLayout>