<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="87dp"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:onClick="loginPressed"/>

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/usernameLabel"
        android:textSize="24sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint=""
        android:layout_marginTop="22dp"
        android:id="@+id/login_usernameEdit"
        android:textSize="24sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/usernameLabel" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/alertTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint=""
        android:layout_marginTop="32dp"
        android:id="@+id/login_passwordEdit"
        android:layout_below="@+id/usernameLabel"
        android:layout_alignStart="@+id/usernameLabel" />

    <TextView
        android:text="@string/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/login_alertTextView"
        android:layout_below="@+id/login_passwordEdit"
        android:layout_centerHorizontal="true" />

</RelativeLayout>